# The-Construct-CheckPoint-8-ROS2-Control

./: README.md
Plugin type/src/checkpoint8_auxiliary_files/rb1_ros2_description/: CMakeLists.txt
Plugin type/src/checkpoint8_auxiliary_files/rb1_ros2_description/config/: robot_controllers_config.yaml
Plugin type/src/elevator_controller/: CMakeLists.txt
Plugin type/src/elevator_controller/include/: elevator_controller.hpp
Plugin type/src/elevator_controller/src/: elevator_controller.cpp
Ros Controller type/src/checkpoint8_auxiliary_files/rb1_ros2_description/: CMakeLists.txt
Ros Controller type/src/checkpoint8_auxiliary_files/rb1_ros2_description/config/: diff_drive_controller_config copy.yaml
Ros Controller type/src/checkpoint8_auxiliary_files/rb1_ros2_description/launch/: rb1_ros2_xacro.launch.py
Ros Controller type/src/checkpoint8_auxiliary_files/rb1_ros2_description/xacro/: rb1_ros2_base.urdf.xacro
ros2_ws_plugin_type/src/checkpoint8_auxiliary_files/rb1_ros2_description/: package.xml
ros2_ws_plugin_type/src/checkpoint8_auxiliary_files/rb1_ros2_description/urdf/: common.gazebo.xacro  ros2_control.urdf.xacro
ros2_ws_plugin_type/src/checkpoint8_auxiliary_files/rb1_ros2_description/xacro/: rb1_ros2_base.urdf.xacro
ros2_ws_plugin_type/src/elevator_controller/: elevator_controller.xml  package.xml
ros2_ws_ros_controller_type/src/checkpoint8_auxiliary_files/: README.md
ros2_ws_ros_controller_type/src/checkpoint8_auxiliary_files/rb1_ros2_description/: package.xml
ros2_ws_ros_controller_type/src/checkpoint8_auxiliary_files/rb1_ros2_description/config/: robot_controllers_config.yaml
(+3 files in other folders)
